[project]
name = "llm-spam-detector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "metaflow>=2.15.14",
    "mlflow==2.8.1",
    "pandas==2.0.3",
    "tensorflow==2.13.0",
    "tiktoken>=0.9.0",
    "torch==1.13.1",
    "tqdm>=4.67.1",
]
